--- a/src/css/six.css
+++ b/src/css/six.css
@@ -137,6 +137,7 @@ html {
   word-break: break-word;
   padding: 1rem;
   font-size: 0.8rem;
+  overflow: auto;
 }
 
 .chat-msg .chat-msg-stack .chat-indv:first-child p {
