--- a/src/css/thirteen.css
+++ b/src/css/thirteen.css
@@ -126,7 +126,7 @@ html {
   margin-bottom: 0.2rem;
   word-wrap: break-word;
   word-break: break-word;
-
+  overflow: auto;
   transition: all ease-in-out 0.3ms;
 }
 
