--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 h2 {
-  color: #5f4ba0;
+  color: #4b2a91;
 }
 
 /* button {
-  background-color: #5f4ba0 !important;
+  background-color: #4b2a91 !important;
 } */
 
 #temp_button {
