--- a/src/css/five.css
+++ b/src/css/five.css
@@ -35,11 +35,11 @@
 }
 
 .active-link button {
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   color: white;
 }
 .active-link button {
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   color: white;
 }
 
