--- a/src/css/nine.css
+++ b/src/css/nine.css
@@ -138,7 +138,7 @@ table {
   border-radius: 25px;
   outline: none;
   border: none;
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   gap: 3%;
   color: #fff;
   font-size: 10px;
@@ -157,7 +157,7 @@ table {
   border-radius: 25px;
   outline: none;
   border: none;
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   gap: 3%;
   color: #fff;
   font-size: 10px;
