--- a/src/css/one.css
+++ b/src/css/one.css
@@ -55,7 +55,7 @@ html {
 }
 
 .background-mobile .bottom-container {
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   position: relative;
   padding-left: 5%;
   padding-right: 9%;
@@ -69,7 +69,7 @@ html {
   padding-top: 3%;
   padding-left: 5%;
   text-align: start;
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
 }
 
 .background .left-container::after {
@@ -86,14 +86,14 @@ html {
 }
 
 .main-mobile-container {
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   width: 100% !important;
   /* height: auto !important;  */
 }
 
 .background .right-container {
   width: 50%;
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   position: relative;
   display: flex;
   align-items: center;
@@ -198,7 +198,7 @@ html {
 
 .mobile-text {
   flex: 1 1;
-  background-color: #5f4ba0;
+  background-color: #4b2a91;
   position: relative;
   padding-top: 3%;
   padding-left: 5%;
